kubernetes/production/postgresql-origin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-origin-deployment
  labels:
    app: postgresql-origin
    layer: database
    role: origin
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: postgresql-origin
        layer: database
        role: origin
    spec:
      containers:
        -
          name: postgresql-origin
          image: postgresql:10.6
          imagePullPolicy: IfNotPresent
          ports:
            -
              containerPort: 5432
          volumeMounts:
            -
              name: postgresql-origin-volume-data
              mountPath: /var/lib/postgresql/data
      volumes:
        -
          name: postgresql-origin-volume-data
          persistentVolumeClaim:
            claimName: postgresql-origin-persistent-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-origin-service
  labels:
    app: postgresql-origin
    layer: database
    role: origin
spec:
  ports:
    -
      name: postgresql-origin
      port: 5432
      targetPort: postgresql-origin
  selector:
    app: postgresql-origin
    layer: database
    role: origin
  type: ClusterIP
