kubernetes/production/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ipv4
  labels:
    group: global
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "primary-production-ipv4"
spec:
  backend:
    serviceName: ambassador
    servicePort: ambassador-http
