kubernetes/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blank-api-rails-ingress-ipv4
  annotations:
    kubernetes.io/ingress.global-static-ip-name: blank-api-rails-ipv4
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
spec:
  rules:
    -
      host: crafty-shelter-224719.duckdns.org
      http:
        paths:
          -
            path: /*
            backend:
              serviceName: blank-api-rails-service
              servicePort: 80
  tls:
    -
      secretName: blank-api-rails-tls
      hosts:
        - crafty-shelter-224719.duckdns.org
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blank-api-rails-ingress-ipv6
  annotations:
    kubernetes.io/ingress.global-static-ip-name: blank-api-rails-ipv6
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
spec:
  rules:
    -
      host: crafty-shelter-224719.duckdns.org
      http:
        paths:
        -
          path: /*
          backend:
            serviceName: blank-api-rails-service
            servicePort: 80
  tls:
    -
      secretName: blank-api-rails-tls
      hosts:
        - crafty-shelter-224719.duckdns.org
